--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "GymSpaces"
 uuid = "4896a6fa-884d-11e9-35a0-9763e69c01ff"
 authors = ["Kartikey Gupta <kartikeygupta9097@gmail.com>"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 julia = "1.1"
